@@ -1,5 +1,7 @@
 2010-08-05  David Reveman  <davidr@novell.com>
 
+	* effect.cpp (UpdateShader): Pre-multiply shadow color.
+
 	* effect.cpp (Render): Fix typo that had rgba values set
 	incorrectly. We should of course multiply r/g/b components
 	with the opacity value.
